Page MenuHome GnuPG

Unable to cross compile libgcrypt on x86_64
Closed, ResolvedPublic

Description

When cross compiling for some architectures (x86_64) of Synology NAS I have the
following error:

libtool: compile:
/home/spksrc/spksrc/toolchains/syno-bromolow/work/x86_64-linux-gnu/bin/x86_64-linux-gnu-gcc
-DHAVE_CONFIG_H -I. -I..
-I/home/spksrc/spksrc/cross/libgcrypt/work-bromolow/installusr/local/include
-I/usr/local/include
-I/home/spksrc/spksrc/cross/libgcrypt/work-bromolow/install
usr/local/include
-fvisibility=hidden -Wall -MT hwf-x86.lo -MD -MP -MF .deps/hwf-x86.Tpo -c
hwf-x86.c -fPIC -DPIC -o .libs/hwf-x86.o
hwf-x86.c:150: warning: 'get_xgetbv' defined but not used
/tmp/ccFSId0y.s: Assembler messages:
/tmp/ccFSId0y.s:79: Error: no such instruction: `xgetbv'

Worked fine with 1.5.x

Details

Version
1.6.2

Event Timeline

Diaoul set Version to 1.6.2.
Diaoul added a subscriber: Diaoul.

Synology works with outdated software:

spksrc@spksrc:~/spksrc/cross/libgcrypt$
/home/spksrc/spksrc/toolchains/syno-bromolow/work/x86_64-linux-gnu/bin/x86_64-linux-gnu-as
--versionGNU assembler 2.17
Copyright 2005 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License. This program has absolutely no warranty.
This assembler was configured for a target of `x86_64-linux-gnu'.

Please try the attached patch

werner removed a project: Restricted Project.Dec 19 2014, 8:54 AM
werner added a project: Info Needed.

Path is in the repo so it will go into 1.7. Might have also been backported to 1.6.

werner claimed this task.
werner removed a project: Info Needed.

Thanks for testing